# votp

./: LICENSE  LOCAL_DEVELOPMENT.md  LOCAL_SETUP.md  PROJECT_COMPLETE.md  README.md  README_OLD.md  ZSCALER_FIX_APPLIED.md  dev.ps1  docker-compose.dev.yml  mvp.md  setup.ps1  setup.sh
backend/: .env.dev  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/src/: config.rs  database.rs  main.rs  models.rs  utils.rs
backend/src/graphql/: mod.rs  mutation.rs  query.rs
backend/src/services/: auth.rs  email.rs  email_native_tls.rs  email_zscaler_fix.rs
database/: README.md  docker-compose.yml  init-sharding.sql  init-simple.sql  manage-db.ps1  manage-db.sh
deployment/kubernetes/: README.md  deploy.ps1  deploy.sh  votp-deployment.yaml
docs/: API-Reference.md  Architecture.md  Deployment.md  Local-Development.md  README.md  Troubleshooting.md
extension/: background.js  content.js  debug-votp.js  manifest.json  test-context-fix.js  test-extension.js
extension/sidebar/: sidebar.css  sidebar.html  sidebar.js
