[package]
name = "votp-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
async-graphql = { version = "7", features = ["uuid", "chrono"] }
async-graphql-actix-web = "7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "rust_crypto"] }
argon2 = "0.5"
lettre = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
regex = "1"
url = "2"
sha2 = "0.10"
hex = "0.4"
rand = "0.9.2"

[profile.dev]
debug = 0

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"